force-app/main/default/objects/ProductConsumed/fields/Date_of_the_SA__c.field-meta.xml
<CustomField>
    <fullName>Date_of_the_SA__c</fullName>
    <label>Date of the SA</label>
    <type>Date</type>
</CustomField>