force-app/main/default/objects/ProductConsumed/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <formula>QuantityConsumed /60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>