force-app/main/default/objects/ProductConsumed/fields/Is_Part__c.field-meta.xml
<CustomField>
    <fullName>Is_Part__c</fullName>
    <formula>NOT(ISBLANK( ProductItemId))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Part</label>
    <type>Checkbox</type>
</CustomField>