force-app/main/default/objects/ProductConsumed/fields/MSN_Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>MSN_Activity_Code__c</fullName>
    <description>Activity code</description>
    <formula>IF( ISBLANK(WorkOrderLineItemId) ,  WorkOrder.WorkType.MSN_ActivityCode__c ,  WorkOrderLineItem.WorkType.MSN_ActivityCode__c )</formula>
    <label>Activity Code</label>
    <type>Text</type>
</CustomField>