force-app/main/default/objects/ProductConsumed/fields/MSN_Consumed_From_Location__c.field-meta.xml
<CustomField>
    <fullName>MSN_Consumed_From_Location__c</fullName>
    <description>This field is used to show the Location (e.g. Van) the part has been consumed from directly on the &quot;Products Consumed&quot; record page or in Flows.</description>
    <formula>ProductItem.Location.Name</formula>
    <inlineHelpText>This indicates from where the Part has been consumed from (e.g. a Van)</inlineHelpText>
    <label>Consumed from</label>
    <type>Text</type>
</CustomField>