force-app/main/default/objects/ProductConsumed/fields/MSN_EAM_WorkOrder_No__c.field-meta.xml
<CustomField>
    <fullName>MSN_EAM_WorkOrder_No__c</fullName>
    <description>Used in integration to determine the correct EAM Work Order Reference when creating Parts or Labour Line records and send it to EAM accordingly.</description>
    <formula>IF(ISBLANK( WorkOrderLineItemId ), WorkOrder.Work_Order_No__c , WorkOrderLineItem.MSN_EAM_Work_Order_No__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>EAM Work Order Reference this Part &amp; Labour record will be linked to</inlineHelpText>
    <label>EAM Work Order No.</label>
    <type>Text</type>
</CustomField>