force-app/main/default/objects/ProductConsumed/fields/MSN_Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>MSN_Employee_Code__c</fullName>
    <label>Employee Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>