force-app/main/default/objects/ProductConsumed/fields/MSN_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>MSN_Product_Family__c</fullName>
    <formula>TEXT(ProductItem.Product2.Family)</formula>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>