force-app/main/default/objects/ProductConsumed/fields/MSN_Trade_Code__c.field-meta.xml
<CustomField>
    <fullName>MSN_Trade_Code__c</fullName>
    <defaultValue>&apos;T0C&apos;</defaultValue>
    <label>Trade Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>