force-app/main/default/objects/ProductConsumed/fields/MSN_Type_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>MSN_Type_of_Hours__c</fullName>
    <defaultValue>&apos;12&apos;</defaultValue>
    <description>type of hours used in the labour integration payload</description>
    <label>Type of Hours</label>
    <length>30</length>
    <type>Text</type>
</CustomField>