force-app/main/default/objects/ProductConsumed/fields/MSN_WorkOrder_Number__c.field-meta.xml
<CustomField>
    <fullName>MSN_WorkOrder_Number__c</fullName>
    <description>This formula field is used to show the Work Order Number as a plain text string in screen flows instead of the cryptic Record Id. This is required as the flow Data Table element (currently) cannot retrieve this information via the lookup relationship to work order or work order line item  (e.g. WorkOrder.WorkOrderNumber)</description>
    <formula>IF(ISBLANK( WorkOrderLineItemId ),  WorkOrder.WorkOrderNumber ,  WorkOrderLineItem.LineItemNumber  )</formula>
    <label>Work Order Number</label>
    <type>Text</type>
</CustomField>