force-app/main/default/objects/ProductConsumed/fields/Name_of_Crew__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Crew__c</fullName>
    <label>Name of Crew</label>
    <length>100</length>
    <type>Text</type>
</CustomField>