force-app/main/default/objects/ProductConsumed/fields/Not_Sufficient_EAM_Stock__c.field-meta.xml
<CustomField>
    <fullName>Not_Sufficient_EAM_Stock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Sufficient EAM Stock</label>
    <type>Checkbox</type>
</CustomField>