force-app/main/default/objects/ProductConsumed/fields/Previous_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Previous_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Previous Quantity</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>