force-app/main/default/objects/ProductConsumed/fields/Quantity_Consumed_Diff__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Consumed_Diff__c</fullName>
    <description>Quantity consumed difference atter changing QuantityConsumed. It&apos;s being used to update EAM quantity.</description>
    <formula>if(QuantityConsumed &gt; Previous_Quantity__c, QuantityConsumed -  Previous_Quantity__c, Previous_Quantity__c - QuantityConsumed)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Consumed Diff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>