force-app/main/default/objects/ProductConsumed/fields/Sent_to_EAM__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_EAM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to EAM</label>
    <type>Checkbox</type>
</CustomField>