force-app/main/default/objects/ProductConsumed/validationRules/MSN_CannotCreate_PartsLabour_CompletedWO.validationRule-meta.xml
<ValidationRule>
    <fullName>MSN_CannotCreate_PartsLabour_CompletedWO</fullName>
    <active>true</active>
    <description>Validation rule to prevent users from creating new &quot;Parts &amp; Labour&quot; records, when its Parent Work Order is already in a &quot;completed&quot; state. This is required to prevent the sending of Parts to EAM via the integration after a WO is completed in EAM.</description>
    <errorConditionFormula>AND(
ISNEW(),
OR(
ISPICKVAL( WorkOrder.Status, &apos;Completed&apos;),
ISPICKVAL( WorkOrder.Status, &apos;Cannot Complete&apos;),
ISPICKVAL( WorkOrder.Status, &apos;Canceled&apos;),
ISPICKVAL( WorkOrder.Status, &apos;Rejected&apos;)
)
)</errorConditionFormula>
    <errorMessage>You are not allowed to create new Parts &amp; Labour records when the parent Work Order is already Reviewed, Completed, Cannot Complete, or Canceled. You can still try to adjust existing Parts. Labour cannot be adjusted in SF.</errorMessage>
</ValidationRule>